--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.12"
 dependencies = [
     "anthropic>=0.64.0",
     "datasets>=4.0.0",
+    "dictionary-learning",
+    "ipykernel>=6.30.1",
     "openai>=1.102.0",
     "python-dotenv>=1.1.1",
     "scikit-learn>=1.7.1",
