--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,9 @@ dependencies = [
     "python-dotenv>=1.1.1",
     "scikit-learn>=1.7.1",
     "sentence-transformers>=5.1.0",
+    "slist>=0.3.15",
     "torch>=2.8.0",
+    "tqdm>=4.67.1",
     "transformers>=4.55.4",
     "wandb>=0.21.2",
 ]
