--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "scikit-learn>=1.7.1",
     "sentence-transformers>=5.1.0",
     "slist>=0.3.15",
+    "tenacity>=9.1.2",
     "torch>=2.8.0",
     "tqdm>=4.67.1",
     "transformers>=4.55.4",
