--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,12 @@ dependencies = [
     "anthropic>=0.64.0",
     "datasets>=4.0.0",
     "dictionary-learning",
+    "hdbscan>=0.8.40",
+    "hf-transfer>=0.1.9",
     "ipykernel>=6.30.1",
+    "ipywidgets>=8.1.7",
     "matplotlib>=3.10.6",
+    "nbformat>=5.10.4",
     "openai>=1.102.0",
     "python-dotenv>=1.1.1",
     "scikit-learn>=1.7.1",
