--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "scikit-learn>=1.7.1",
     "sentence-transformers>=5.1.0",
     "slist>=0.3.15",
+    "streamlit>=1.49.1",
     "tenacity>=9.1.2",
     "torch>=2.8.0",
     "tqdm>=4.67.1",
