--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "slist>=0.3.15",
     "streamlit>=1.49.1",
     "tenacity>=9.1.2",
+    "tiktoken>=0.11.0",
     "torch>=2.8.0",
     "tqdm>=4.67.1",
     "transformers>=4.55.4",
