--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "anthropic>=0.64.0",
     "bertopic>=0.17.3",
+    "black>=25.9.0",
     "datasets>=4.0.0",
     "dictionary-learning",
     "hdbscan>=0.8.40",
