--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "hf-transfer>=0.1.9",
     "ipykernel>=6.30.1",
     "ipywidgets>=8.1.7",
+    "kaleido>=1.1.0",
     "matplotlib>=3.10.6",
     "nbformat>=5.10.4",
     "openai>=1.102.0",
