--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -15,6 +15,10 @@
         "data",
         "__pycache__",
         ".api_cache",
-        "results"
+        ".cache",
+        "logs",
+        "scrap",
+        "results",
+        "user_prompts"
     ]
 }
