--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "datasets>=4.0.0",
     "dictionary-learning",
     "hf-transfer>=0.1.9",
+    "huggingface-hub>=0.36.0",
     "ipykernel>=6.30.1",
     "ipywidgets>=8.1.7",
     "kaleido>=1.1.0",
