--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "ipykernel>=6.30.1",
     "ipywidgets>=8.1.7",
     "kaleido>=1.1.0",
+    "loguru>=0.7.3",
     "matplotlib>=3.10.6",
     "nbformat>=5.10.4",
     "openai>=1.102.0",
