--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "huggingface-hub>=0.36.0",
     "ipykernel>=6.30.1",
     "ipywidgets>=8.1.7",
+    "json-repair>=0.54.2",
     "kaleido>=1.1.0",
     "loguru>=0.7.3",
     "matplotlib>=3.10.6",
