--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ data/evo/*
 !data/evo/20251218-155435-list_reverse-handpick-plus/**
 !data/evo/20251226-133700-list_reverse-chatgpt-plus/
 !data/evo/20251226-133700-list_reverse-chatgpt-plus/**
+!data/evo/20260103-171901-list_reverse-handpick-plus/
+!data/evo/20260103-171901-list_reverse-handpick-plus/**
 
 !plots/20251218-155435-list_reverse-handpick-plus/
 !plots/20251218-155435-list_reverse-handpick-plus/**
